--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
       fbq("init", "1196276485496140");
       fbq("track", "PageView");
     </script>
+
+    <!-- End Meta Pixel Code -->
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+    <!-- Meta Pixel Code -->
     <noscript
       ><img
         height="1"
@@ -59,9 +66,5 @@
         src="https://www.facebook.com/tr?id=1196276485496140&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Meta Pixel Code -->
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
