clarity added code to header

--- a/index.html
+++ b/index.html
@@ -74,26 +74,21 @@
     </script>
 
     <!-- End Meta Pixel Code -->
-    <script>
-      (function (c, s, q, u, a, r, e) {
-        c.hj =
-          c.hj ||
+    <!-- MS Clarity -->
+
+    <script type="text/javascript">
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
           function () {
-            (c.hj.q = c.hj.q || []).push(arguments);
+            (c[a].q = c[a].q || []).push(arguments);
           };
-        c._hjSettings = { hjid: a };
-        r = s.getElementsByTagName("head")[0];
-        e = s.createElement("script");
-        e.async = true;
-        e.src = q + c._hjSettings.hjid + u;
-        r.appendChild(e);
-      })(
-        window,
-        document,
-        "https://static.hj.contentsquare.net/c/csq-",
-        ".js",
-        5330669
-      );
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = "https://www.clarity.ms/tag/" + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+      })(window, document, "clarity", "script", "qlgptz83mo");
     </script>
   </head>
   <body>
