new hotjar integratoin, no clarity

--- a/index.html
+++ b/index.html
@@ -15,14 +15,26 @@
         e.async = true;
         e.src = q + c._hjSettings.hjid + u;
         r.appendChild(e);
-      })(
-        window,
-        document,
-        "https://static.hj.contentsquare.net/c/csq-",
-        ".js",
-        5330669
-      );
+      })(window, document, "https://static.hj.contentsquare.net/c/csq-", ".js", 5330669);
     </script>
+
+    <!-- New Hotjar Script -->
+    <script>
+      (function (c, s, q, u, a, r, e) {
+        c.hj =
+          c.hj ||
+          function () {
+            (c.hj.q = c.hj.q || []).push(arguments);
+          };
+        c._hjSettings = { hjid: a };
+        r = s.getElementsByTagName("head")[0];
+        e = s.createElement("script");
+        e.async = true;
+        e.src = q + c._hjSettings.hjid + u;
+        r.appendChild(e);
+      })(window, document, "https://static.hj.contentsquare.net/c/csq-", ".js", 5331712);
+    </script>
+
     <link
       rel="icon"
       type="image/svg+xml"
@@ -44,6 +56,7 @@
     />
     <meta property="og:image" content="https://i.imgur.com/6BRJU5Q.png" />
     <meta property="og:type" content="website" />
+
     <!-- Meta Pixel Code -->
     <script>
       !(function (f, b, e, v, n, t, s) {
@@ -63,37 +76,13 @@
         t.src = v;
         s = b.getElementsByTagName(e)[0];
         s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
+      })(window, document, "script", "https://connect.facebook.net/en_US/fbevents.js");
       fbq("init", "1196276485496140");
       fbq("track", "PageView");
     </script>
 
     <!-- End Meta Pixel Code -->
-    <!-- MS Clarity -->
 
-    <script type="text/javascript">
-      (function (c, l, a, r, i, t, y) {
-        c[a] =
-          c[a] ||
-          function () {
-            (c[a].q = c[a].q || []).push(arguments);
-          };
-        t = l.createElement(r);
-        t.async = 1;
-        t.src = "https://www.clarity.ms/tag/" + i;
-        y = l.getElementsByTagName(r)[0];
-        y.parentNode.insertBefore(t, y);
-      })(window, document, "clarity", "script", "qlgptz83mo");
-    </script>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
     <!-- Meta Pixel Code -->
     <noscript
       ><img
