new hotjar integratoin, no clarity fixed header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       })(window, document, "https://static.hj.contentsquare.net/c/csq-", ".js", 5330669);
     </script>
 
-    <!-- New Hotjar Script -->
     <script>
       (function (c, s, q, u, a, r, e) {
         c.hj =
@@ -35,21 +34,14 @@
       })(window, document, "https://static.hj.contentsquare.net/c/csq-", ".js", 5331712);
     </script>
 
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="https://i.imgur.com/6BRJU5Q.png"
-    />
+    <link rel="icon" type="image/svg+xml" href="https://i.imgur.com/6BRJU5Q.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Haybales & Chandeliers</title>
     <meta
       name="description"
       content="Your perfect wedding vision brought to life without the stress or huge price tag. Book your free wedding planning session today!"
     />
-    <meta
-      property="og:title"
-      content="Haybales & Chandeliers - Wedding Planning Services"
-    />
+    <meta property="og:title" content="Haybales & Chandeliers - Wedding Planning Services" />
     <meta
       property="og:description"
       content="Your perfect wedding vision brought to life without the stress or huge price tag. Book your free wedding planning session today!"
@@ -62,9 +54,7 @@
       !(function (f, b, e, v, n, t, s) {
         if (f.fbq) return;
         n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
+          n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments);
         };
         if (!f._fbq) f._fbq = n;
         n.push = n;
@@ -77,20 +67,23 @@
         s = b.getElementsByTagName(e)[0];
         s.parentNode.insertBefore(t, s);
       })(window, document, "script", "https://connect.facebook.net/en_US/fbevents.js");
+
       fbq("init", "1196276485496140");
       fbq("track", "PageView");
     </script>
-
     <!-- End Meta Pixel Code -->
+  </head>
 
-    <!-- Meta Pixel Code -->
-    <noscript
-      ><img
+  <body>
+    <!-- Meta Pixel Code (noscript moved inside body to prevent build errors) -->
+    <noscript>
+      <img
         height="1"
         width="1"
         style="display: none"
         src="https://www.facebook.com/tr?id=1196276485496140&ev=PageView&noscript=1"
-    /></noscript>
+      />
+    </noscript>
     <!-- End Meta Pixel Code -->
   </body>
 </html>
