new hotjar integration, old one removed

--- a/index.html
+++ b/index.html
@@ -2,46 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script>
-      (function (c, s, q, u, a, r, e) {
-        c.hj =
-          c.hj ||
-          function () {
-            (c.hj.q = c.hj.q || []).push(arguments);
-          };
-        c._hjSettings = { hjid: a };
-        r = s.getElementsByTagName("head")[0];
-        e = s.createElement("script");
-        e.async = true;
-        e.src = q + c._hjSettings.hjid + u;
-        r.appendChild(e);
-      })(window, document, "https://static.hj.contentsquare.net/c/csq-", ".js", 5330669);
-    </script>
-
-    <script>
-      (function (c, s, q, u, a, r, e) {
-        c.hj =
-          c.hj ||
-          function () {
-            (c.hj.q = c.hj.q || []).push(arguments);
-          };
-        c._hjSettings = { hjid: a };
-        r = s.getElementsByTagName("head")[0];
-        e = s.createElement("script");
-        e.async = true;
-        e.src = q + c._hjSettings.hjid + u;
-        r.appendChild(e);
-      })(window, document, "https://static.hj.contentsquare.net/c/csq-", ".js", 5331712);
-    </script>
-
-    <link rel="icon" type="image/svg+xml" href="https://i.imgur.com/6BRJU5Q.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Haybales & Chandeliers</title>
+
     <meta
       name="description"
       content="Your perfect wedding vision brought to life without the stress or huge price tag. Book your free wedding planning session today!"
     />
-    <meta property="og:title" content="Haybales & Chandeliers - Wedding Planning Services" />
+    <meta
+      property="og:title"
+      content="Haybales & Chandeliers - Wedding Planning Services"
+    />
     <meta
       property="og:description"
       content="Your perfect wedding vision brought to life without the stress or huge price tag. Book your free wedding planning session today!"
@@ -49,12 +20,35 @@
     <meta property="og:image" content="https://i.imgur.com/6BRJU5Q.png" />
     <meta property="og:type" content="website" />
 
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://i.imgur.com/6BRJU5Q.png"
+    />
+
+    <!-- Hotjar Tracking Code -->
+    <script>
+      (function (c, s, q, u, a, r, e) {
+          c.hj = c.hj || function () {
+              (c.hj.q = c.hj.q || []).push(arguments);
+          };
+          c._hjSettings = { hjid: a };
+          r = s.getElementsByTagName('head')[0];
+          e = s.createElement('script');
+          e.async = true;
+          e.src = q + c._hjSettings.hjid + u;
+          r.appendChild(e);
+      })(window, document, 'https://static.hj.contentsquare.net/c/csq-', '.js', 5331712);
+    </script>
+
     <!-- Meta Pixel Code -->
     <script>
       !(function (f, b, e, v, n, t, s) {
         if (f.fbq) return;
         n = f.fbq = function () {
-          n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments);
+          n.callMethod
+            ? n.callMethod.apply(n, arguments)
+            : n.queue.push(arguments);
         };
         if (!f._fbq) f._fbq = n;
         n.push = n;
@@ -71,11 +65,7 @@
       fbq("init", "1196276485496140");
       fbq("track", "PageView");
     </script>
-    <!-- End Meta Pixel Code -->
-  </head>
 
-  <body>
-    <!-- Meta Pixel Code (noscript moved inside body to prevent build errors) -->
     <noscript>
       <img
         height="1"
@@ -85,5 +75,6 @@
       />
     </noscript>
     <!-- End Meta Pixel Code -->
-  </body>
+  </head>
+  <body></body>
 </html>
