--- a/index.html
+++ b/index.html
@@ -29,16 +29,24 @@
     <!-- Hotjar Tracking Code -->
     <script>
       (function (c, s, q, u, a, r, e) {
-          c.hj = c.hj || function () {
-              (c.hj.q = c.hj.q || []).push(arguments);
+        c.hj =
+          c.hj ||
+          function () {
+            (c.hj.q = c.hj.q || []).push(arguments);
           };
-          c._hjSettings = { hjid: a };
-          r = s.getElementsByTagName('head')[0];
-          e = s.createElement('script');
-          e.async = true;
-          e.src = q + c._hjSettings.hjid + u;
-          r.appendChild(e);
-      })(window, document, 'https://static.hj.contentsquare.net/c/csq-', '.js', 5331712);
+        c._hjSettings = { hjid: a };
+        r = s.getElementsByTagName("head")[0];
+        e = s.createElement("script");
+        e.async = true;
+        e.src = q + c._hjSettings.hjid + u;
+        r.appendChild(e);
+      })(
+        window,
+        document,
+        "https://static.hj.contentsquare.net/c/csq-",
+        ".js",
+        5331744
+      );
     </script>
 
     <!-- Meta Pixel Code -->
@@ -60,12 +68,19 @@
         t.src = v;
         s = b.getElementsByTagName(e)[0];
         s.parentNode.insertBefore(t, s);
-      })(window, document, "script", "https://connect.facebook.net/en_US/fbevents.js");
-
+      })(
+        window,
+        document,
+        "script",
+        "https://connect.facebook.net/en_US/fbevents.js"
+      );
       fbq("init", "1196276485496140");
       fbq("track", "PageView");
     </script>
+  </head>
 
+  <body>
+    <!-- Meta Pixel NoScript (Moved Inside Body) -->
     <noscript>
       <img
         height="1"
@@ -74,7 +89,5 @@
         src="https://www.facebook.com/tr?id=1196276485496140&ev=PageView&noscript=1"
       />
     </noscript>
-    <!-- End Meta Pixel Code -->
-  </head>
-  <body></body>
+  </body>
 </html>
