full reset - broken fixes with new hotjar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       href="https://i.imgur.com/6BRJU5Q.png"
     />
 
-    <!-- Hotjar Tracking Code -->
+    <!-- Hotjar Tracking Code (New) -->
     <script>
       (function (c, s, q, u, a, r, e) {
         c.hj =
@@ -80,7 +80,10 @@
   </head>
 
   <body>
-    <!-- Meta Pixel NoScript (Moved Inside Body) -->
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+
+    <!-- Meta Pixel NoScript -->
     <noscript>
       <img
         height="1"
